build: support Java 17 with Boot 3